--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -126,7 +126,13 @@ body {
             // .navserach{
             //     height: 60px;
             // }
-
+            .navserach select{
+                border: none;
+                border-top-left-radius: 8px;
+                color: white;
+                cursor: pointer;
+                border-bottom-left-radius: 8px;
+            }
             .navserach input {
                 height: 40px !important;
                 width: 350px;
@@ -151,6 +157,7 @@ body {
                 right: 38px;
                 width: 25px;
                 height: 25px;
+                cursor: pointer;
             }
 
             .navIcons .alertIcon,
