--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -91,7 +91,7 @@
                 </div>
             </div>
         </div>
-        <div class="card px-2 py-2">
+        <!-- <div class="card px-2 py-2">
             <div class="d-flex justify-content-between">
                 <p>Employees</p>
                 <i class='bx bx-dots-vertical-rounded fs-5'></i>
@@ -141,6 +141,44 @@
                             <span style="background-color: #253D90;" class="px-1 py-1"><img src="/dashboardIcon/download.png" alt=""></span>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div> -->
+        <div class="card px-2 py-2">
+            <div class="d-flex justify-content-between">
+                <p>Employees</p>
+                <i class='bx bx-dots-vertical-rounded fs-5'></i>
+            </div>
+            <div class="jobs d-flex flex-column gap-1">
+                <div class="job d-flex justify-content-between pe-2 pt-1 rounded" style="background: #E3EDF9;">
+                    <div class="d-flex">
+                        <img src="/dashboardIcon/Rectangle 34.png" alt="">
+                        <div>
+                            <p style="margin: 0;">Sales Executive</p>
+                            <p style="margin: 0; font-size: 12px;">Access Bank</p>
+                        </div>
+                    </div>
+                    <p style="font-size: 14px;">20 mins ago</p>
+                </div>
+                <div class="job d-flex justify-content-between pe-2 pt-1 rounded" style="background: #E3EDF9;">
+                    <div class="d-flex">
+                        <img src="/dashboardIcon/Rectangle 36.png" alt="">
+                        <div>
+                            <p style="margin: 0;">User Experience Designer</p>
+                            <p style="margin: 0; font-size: 12px;">Paystack</p>
+                        </div>
+                    </div>
+                    <p style="font-size: 14px;">10 mins ago</p>
+                </div>
+                <div class="job d-flex justify-content-between pe-2 pt-1 rounded" style="background: #E3EDF9;">
+                    <div class="d-flex">
+                        <img src="/dashboardIcon/Rectangle 38.png" alt="">
+                        <div>
+                            <p style="margin: 0;">Product Manager</p>
+                            <p style="margin: 0; font-size: 12px;">T-Pay</p>
+                        </div>
+                    </div>
+                    <p style="font-size: 14px;">5 mins ago</p>
                 </div>
             </div>
         </div>
