--- a/src/app/admin/user/user-list/user-list.component.html
+++ b/src/app/admin/user/user-list/user-list.component.html
@@ -1,5 +1,10 @@
 
 <div class="table_section">
+  <div class="table_search_box">
+    <input [(ngModel)]="searchItem"
+    (input)="filterData()" 
+     type="text" placeholder="search..." name="" id="">
+  </div>
   <table class="table table-success  table-hover">
     <thead>
       <tr>
@@ -13,7 +18,7 @@
     </thead>
     <tbody>
       
-        @for (item of userList; track $index) {
+        @for (item of filteredData; track $index) {
           <tr>
           <td>{{$index+1}}</td>
         <td>{{item.name | uppercase}}</td>
@@ -51,7 +56,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="staticBackdropLabel">User Details</h1>
+        <h1 class="modal-title fs-5 text-black" id="staticBackdropLabel">User Details</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
           (click)="close_view_popup()"></button>
       </div>
