--- a/src/app/admin/user/user.component.html
+++ b/src/app/admin/user/user.component.html
@@ -1,11 +1,11 @@
 <div>
-    <div class="text-black d-flex align-items-center gap-1 fs-4 mt-4">
+    <div class="text-black d-flex align-items-center gap-1 fs-6 mt-2">
         <i class='bx bxs-user'></i>
         <p class="m-0">User Management</p>
     </div>
-    <div class="dashboardSlider ">
+    <div class="dashboardSlider mb-2">
         <div routerLink="add-user"
-            class="dashboardCard d-flex align-items-center justify-content-center text-white gap-3 shadow-lg p-3 mb-5 rounded"
+            class="dashboardCard d-flex align-items-center justify-content-center text-white gap-3 p-3  rounded"
             style="background-color: #FFC20E;">
             <span>Add User</span>
         </div>
