--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,8 +1,9 @@
 <div class="adminDashboard d-flex ">
-    <div  class="sidebarSection" [ngClass]="{'active': sidebarOpen}">
+    <div class="sidebarSection" [ngClass]="{'active': sidebarOpen}">
         <div class="sidebarHeader">
             <img src="/img/loginLogo.png" width="60%" height="50px" alt="">
-            <div (click)="toggleSidebar()" class="sidebarClose"><i class='bx bx-left-arrow-circle fs-1'  style="cursor: pointer;"></i></div>
+            <div (click)="toggleSidebar()" class="sidebarClose"><i class='bx bx-left-arrow-circle fs-1'
+                    style="cursor: pointer;"></i></div>
             <div class="d-flex align-items-center gap-3 mt-3">
                 <div class="adminProfile">
                     <img src="/img/dp 1.png" alt="">
@@ -16,7 +17,8 @@
 
         <div class="dashboard mt-2">
             <p style="font-size: 12px;">Features</p>
-            <div (click)="toggleSidebar()" [ngClass]="{'active': menuItemId ==='dashboard'}"  appHoverEffect routerLink="dashboard" class="mt-1  d-flex align-items-center text-white px-3 gap-1">
+            <div [ngClass]="{'active': menuItemId === 'dashboard'}" (click)="setActiveMenuItem('dashboard')"
+                appHoverEffect routerLink="dashboard" class="mt-1  d-flex align-items-center text-white px-3 gap-1">
                 <img src="/dashboardIcon/Vector (1).png" width="20px" height="20px" alt="" style="filter: invert(1);">
                 <p style="font-size: 14px;">Dashboard</p>
             </div>
@@ -25,41 +27,45 @@
 
         <div class="dashboard mt-2 ">
             <p style="font-size: 12px;">Organization</p>
-            <div (click)="toggleSidebar()"    appHoverEffect routerLink="user" class=" d-flex align-items-center text-white px-3 gap-1">
+            <div [ngClass]="{'active': menuItemId === 'user'}" (click)="setActiveMenuItem('user')" appHoverEffect
+                routerLink="user" class=" d-flex align-items-center text-white px-3 gap-1">
                 <img src="/dashboardIcon/user-alt.png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Employee Management</p>
             </div>
-            <div (click)="toggleSidebar()" routerLink="leave-management" appHoverEffect class=" d-flex align-items-center text-white px-3  gap-1">
+            <div [ngClass]="{'active': menuItemId === 'leave'}" (click)="setActiveMenuItem('leave')"
+                routerLink="leave-management" appHoverEffect class=" d-flex align-items-center text-white px-3  gap-1">
                 <img src="/dashboardIcon/book-open.png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Leave Management</p>
             </div>
-            <div (click)="toggleSidebar()" routerLink="emp-department"  (click)="onAccordion()" appHoverEffect class=" d-flex align-items-center text-white px-3 gap-1" data-toggle="collapse" data-target="#demo">
+            <div  [ngClass]="{'active': menuItemId === 'empDep'}" (click)="setActiveMenuItem('empDep')"
+                routerLink="emp-department"  appHoverEffect
+                class=" d-flex align-items-center text-white px-3 gap-1" data-toggle="collapse" data-target="#demo">
                 <img src="/dashboardIcon/Vector.png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Employee Department</p>
             </div>
-            <!-- <div *ngIf="is_Accordion" id="demo" class="container collapse show d-flex flex-column">
-                <div style="cursor: pointer;" routerLink="emp-department/add-emp-depart" >Add Department</div>
-                <div style="cursor: pointer;" routerLink="emp-department/view-emp-depart">View Department</div>
-            </div> -->
-            <div (click)="toggleSidebar()" routerLink="project" appHoverEffect class=" d-flex align-items-center text-white px-3  gap-1">
+            <div [ngClass]="{'active': menuItemId === 'empStep'}" (click)="setActiveMenuItem('empStep')"
+                routerLink="empStepper" appHoverEffect class=" d-flex align-items-center text-white px-3  gap-1">
                 <img src="/dashboardIcon/Vector (5).png" width="20px" height="20px" alt="">
-                <p style="font-size: 14px;">Projects</p>
+                <p style="font-size: 14px;">Employee Stepper</p>
             </div>
+          
+            <!-- another method to give background color  -->
+            <!-- <div  [routerLinkActive]="'active'"
+             routerLink="empStepper" appHoverEffect class=" d-flex align-items-center text-white px-3  gap-1">
+                <img src="/dashboardIcon/Vector (5).png" width="20px" height="20px" alt="">
+                <p style="font-size: 14px;">Employee Stepper</p>
+            </div> -->
         </div>
         <div class="dashboard mt-2 ">
             <p style="font-size: 12px;">Recruitment</p>
-            <div (click)="toggleSidebar()" appHoverEffect class="d-flex align-items-center text-white px-3 gap-1">
+            <div appHoverEffect class="d-flex align-items-center text-white px-3 gap-1">
                 <img src="/dashboardIcon/Vector (3).png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Jobs</p>
             </div>
-            <div (click)="toggleSidebar()" appHoverEffect class=" d-flex align-items-center text-white px-3  gap-1">
+            <div appHoverEffect class=" d-flex align-items-center text-white px-3  gap-1">
                 <img src="/dashboardIcon/Vector (4).png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Candidates</p>
             </div>
-            <!-- <div  appHoverEffect class=" d-flex align-items-center text-white px-3 gap-1">
-                <img src="/dashboardIcon/Vector (5).png" width="20px" height="20px" alt="">
-                <p style="font-size: 14px;">Resumes</p>
-            </div> -->
         </div>
 
         <div (click)="onLogout()"
@@ -67,21 +73,21 @@
             <img src="/dashboardIcon/Vector (7).png" width="15px" height="15px" alt="">
             <p>Log Out</p>
         </div>
+        
     </div>
 
-    <div class="rightSection px-4" >
+    <div class="rightSection px-4">
         <nav class="d-flex justify-content-between align-items-center pt-4">
             <div (click)="toggleSidebar()" class="menuIcon d-flex align-items-center">
                 <img src="/dashboardIcon/Group 47.svg" width="30px" height="30px" alt="">
             </div>
             <div class="navserach  d-flex align-items-center">
-                    <select name="" id="" class="bg-primary py-2 px-2">
-                        <option value="">All Candidates</option>
-                        <option value="">Frontend Developer</option>
-                        <option value="">Backend Developer</option>
-                        <option value="">Full-stack Developer</option>
-
-                    </select>
+                <select name="" id="" class="py-2 px-2">
+                    <option value="">All Candidates</option>
+                    <option value="">Frontend Developer</option>
+                    <option value="">Backend Developer</option>
+                    <option value="">Full-stack Developer</option>
+                </select>
                 <input type="text" name="" id="" placeholder="search">
                 <img src="/dashboardIcon/search.png" alt="">
             </div>
