--- a/src/app/admin/user/user-list/user-list.component.scss
+++ b/src/app/admin/user/user-list/user-list.component.scss
@@ -7,7 +7,9 @@
     top: 120px;
     right: 26px;
     input{
-      padding: 0 7px;
+      border-radius: 4px;
+      border: none;
+      padding: 5px;
     }
   }
 
