--- a/src/app/admin/employee-depart/employee-depart.component.html
+++ b/src/app/admin/employee-depart/employee-depart.component.html
@@ -1,11 +1,11 @@
 <div>
-    <div class="text-black d-flex align-items-center gap-1 fs-4 mt-4">
+    <div class="text-black d-flex align-items-center gap-1 fs-5 mt-1">
         <i class='bx bxs-user'></i>
         <p class="m-0">Employee Department</p>
     </div>
     <div class="dashboardSlider ">
         <div routerLink="add-emp-depart"
-            class="dashboardCard d-flex align-items-center justify-content-center text-white gap-3 shadow-lg p-3 mb-5 rounded"
+            class="dashboardCard d-flex align-items-center justify-content-center text-white gap-3 p-3 mb-2 rounded"
             style="background-color: #FFC20E;">
             <span>Add Department</span>
         </div>
@@ -21,6 +21,4 @@
         </div>
     </div>
 </div>
-
-
 <router-outlet></router-outlet>
