--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,12 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+// .mat-custm-table{
+//     .mat-mdc-header-cell{
+//       background-color: #007bff !important;
+//     }
+//   }
+
+    
