--- a/src/app/admin/emp-stepper/view-emp/view-emp.component.html
+++ b/src/app/admin/emp-stepper/view-emp/view-emp.component.html
@@ -1,27 +1,43 @@
-<div class="viem_emp_section mt-4">
-    <table class="table">
+<div routerLink="/admin/empStepper" class="mb-1" ><button type="button" class="btn btn-primary">Add Employee</button></div>
+<div class="viem_emp_section mt-2">
+    <table class="table table_custom_css">
         <thead>
           <tr>
             <th scope="col">S No</th>
             <th scope="col">First Name</th>
             <th scope="col">Last Name</th>
-            <th scope="col">Last Name</th>
-            <th scope="col">Last Name</th>
-            <th scope="col">Last Name</th>
-            <th scope="col">Last Name</th>
-            <th scope="col">Last Name</th>
-            <th scope="col">Last Name</th>
-            <th scope="col">Last Name</th>
-
+            <th scope="col">Department</th>
+            <th scope="col">Email</th>
+            <th scope="col">Mobile</th>
+            <th scope="col">Username</th>
+            <th scope="col">Street Addres</th>
+            <th scope="col">APT Number</th>
+            <th scope="col">State</th>
+            <th scope="col">Zip Code</th>
+            <th scope="col">Action</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-          </tr>
-          
+          @for (item of employee_list; track $index) {
+            <tr>
+              <th scope="row">{{$index+1}}</th>
+              <td>{{item.firstname}}</td>
+              <td>{{item.lastname}}</td>
+              <td>{{item.department}}</td>
+              <td>{{item.email}}</td>
+              <td>{{item.mobile}}</td>
+              <td>{{item.username}}</td>
+              <td>{{item.streetAddress}}</td>
+              <td>{{item.aptNumber}}</td>
+              <td>{{item.state}}</td>
+              <td>{{item.zipcode}}</td>
+              <td class="d-flex gap-2">
+                <button type="button" class="btn btn-primary" (click)="onEdit(item)">Edit</button>
+                <button type="button" class="btn btn-danger" (click)="onDelete(item.id)">Delete</button>
+              </td>
+            </tr>
+          } 
         </tbody>
       </table>
 </div>
+<router-outlet/>
